Added in WormNAT2 proxy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,8 @@
   <font size="3">Welcome to this MyWormNET2 server.</font><br>
   <br><br><br><br>
   <font size="4"><a href="/wormageddonweb/Login.asp">JOIN</a></font><br>
+  <font size="4"><a href="/wormageddonweb/GameList.asp?Channel=AnythingGoes">View Game List (AnythingGoes)</a></font><br>
+  <font size="4"><a href="/wormageddonweb/GameList.asp?Channel=PartyTime">View Game List (PartyTime)</a></font><br>
   <br><br><br><br><br><br><br><br><br>
   <font size="1" color="Silver">MyWormNET2 server software by CyberShadow</font>
  </body>
