--- a/news-sample.html
+++ b/news-sample.html
@@ -1,7 +1,3 @@
 <body BGCOLOR="DarkBlue"><CENTER>
-<FONT SIZE="4" COLOR="Yellow">N E W S</FONT><BR>
-<BR>
-<FONT SIZE="3" COLOR="Yellow">WormNET down! Worldwide panic!</FONT><BR>
-<FONT SIZE="2" COLOR="White">25 Aug 2011</FONT><BR>
-<FONT SIZE="1" COLOR="Silver">Nobody knows the cause of the catastrophe. Disaster refugees are seeking alternative servers.</FONT><BR>
+<FONT SIZE="1" COLOR="Silver">No news from Dave :(</FONT><BR>
 </CENTER>
